--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,22 +1,29 @@
-/* Main styles
--------------------------*/
-body {
-  background-image: url("../img/background3.jpg");
-  background-position: 100%;
-  background-repeat: repeat;
-  color: black;
-  font-family: 'Droid Sans', sans-serif; }
+.about {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+  padding: 50px; }
+  .about h2 {
+    font-family: "Frijole", cursive; }
 
-h1 {
-  font-family: "Frijole", cursive; }
+#thoughts {
+  margin-bottom: 100px; }
 
-#index {
-  background-image: url("../img/background2.jpg");
-  background-position: center;
-  background-size: cover; }
-
-#intro {
+.initial {
   padding: 20px; }
+  .initial h2 {
+    font-family: "Frijole", cursive; }
+
+#author {
+  max-width: 300px;
+  float: right;
+  padding: 30px; }
+
+#teenager {
+  max-width: 300px;
+  float: left;
+  padding: 30px; }
 
 /* Header styles
 -------------------------*/
@@ -27,36 +34,30 @@ h1 {
   background-image: url("../img/background3.jpg");
   padding: 0 !important; }
   .jumbotron h1 {
-    font-size: 1.25em;
-    text-align: center; }
+    font-size: 1em; }
 
 .logo {
-  width: 20%;
-  height: 20%; }
+  width: 15%;
+  height: 15%; }
 
-/* Footer styles
--------------------------*/
 footer {
   height: 10vh;
   font-family: "Frijole", cursive;
   padding: 20px; }
 
-/* Menu styles
--------------------------*/
 #menu {
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   margin-left: -20px; }
   #menu li {
     list-style: none;
-    font-family: 'Frijole', cursive;
-    display: inline-block;
+    font-family: "Frijole", cursive;
     vertical-align: top; }
   #menu a {
     text-decoration: none;
     color: black; }
 
-/* Feature styles
-----------------------*/
 #feature img {
   padding: 10px;
   display: block;
@@ -66,12 +67,10 @@ footer {
     transform: scale(1.1, 1.1); }
 
 #feature h3 {
-  font-family: 'Frijole', cursive;
+  font-family: "Frijole", cursive;
   margin-bottom: 20px;
   text-align: center; }
 
-/* Overlay styles
-----------------------*/
 .modal-dialog {
   width: 100%;
   margin: 0;
@@ -138,34 +137,35 @@ footer {
     font-weight: bold;
     text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; }
 
-/* About Styles
- --------------------------*/
-.about {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 800px;
-  padding: 50px; }
-  .about h2 {
-    font-family: "Frijole", cursive; }
+/* Main styles
+-------------------------*/
+body {
+  background-image: url("../img/background3.jpg");
+  background-position: 100%;
+  background-repeat: repeat;
+  color: black;
+  font-family: 'Droid Sans', sans-serif; }
 
-#thoughts {
-  margin-bottom: 100px; }
+.flex-container {
+  display: flex; }
 
-.initial {
+h1 {
+  font-family: "Frijole", cursive; }
+
+.main {
+  background-image: url("../img/background2.jpg");
+  background-position: center;
+  background-size: cover; }
+
+#intro {
   padding: 20px; }
-  .initial h2 {
-    font-family: "Frijole", cursive; }
 
-#author {
-  max-width: 300px;
-  float: right;
-  padding: 30px; }
-
-#teenager {
-  max-width: 300px;
-  float: left;
-  padding: 30px; }
+.home {
+  display: flex; }
+  .home .intro {
+    width: 50%; }
+  .home .feature {
+    width: 50%; }
 
 /*Error Styles
 -----------------------*/
@@ -231,11 +231,11 @@ h2 {
 /* Menu CSS
 ---------------------*/
 #menu button {
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
   border: none;
   margin: 0; }
 
-.top {
+#menu li {
   vertical-align: top;
   font-size: 1em; }
 
@@ -294,8 +294,16 @@ h2 {
 
 @media (max-width: 768px) and (min-width: 512px) {
   .jumbotron h1 {
-    font-size: 2.25em; }
+    font-size: 1.75em; }
   .icn-error {
     padding: 0 3em; } }
+
+@media (min-width: 512px) {
+  #menu {
+    flex-direction: column; }
+  .sidebar {
+    width: 25%; }
+  .main {
+    width: 50%; } }
 
 /*# sourceMappingURL=main.css.map */
