--- a/src/css/main.css
+++ b/src/css/main.css
@@ -53,10 +53,29 @@ footer {
   #menu li {
     list-style: none;
     font-family: "Frijole", cursive;
-    vertical-align: top; }
+    vertical-align: top;
+    font-size: 1em; }
   #menu a {
     text-decoration: none;
     color: black; }
+  #menu button {
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    margin: 0; }
+
+#all {
+  font-size: 1em;
+  padding: 0; }
+
+.sub {
+  font-size: 0.75em; }
+
+.supersub {
+  padding-left: 0; }
+
+.supersub li {
+  font-size: 0.6em;
+  display: block !important; }
 
 #feature img {
   padding: 10px;
@@ -137,8 +156,88 @@ footer {
     font-weight: bold;
     text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white; }
 
-/* Main styles
--------------------------*/
+.errorPage {
+  height: 500px; }
+  .errorPage h1 {
+    text-align: center; }
+
+.icn-logo {
+  background: #54606b;
+  color: #fff; }
+
+.icn-logo i {
+  font-size: 2.45em;
+  line-height: 0;
+  margin-top: 30px; }
+
+.icn-error {
+  font-size: 5em;
+  margin-bottom: .25em;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 2em; }
+
+.list {
+  display: flex;
+  list-style: none;
+  flex-wrap: wrap; }
+  .list li {
+    height: 325px; }
+
+#gallery ul li {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  #gallery ul li a {
+    text-decoration: none; }
+  #gallery ul li p {
+    margin-top: 20px;
+    text-align: center; }
+  #gallery ul li img {
+    width: 150px;
+    margin: 20px;
+    display: inline-block; }
+  #gallery ul li h4 {
+    width: 200px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black; }
+
+h2 {
+  text-align: center; }
+
+.search {
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+.picture {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  background-image: url("../img/overlay.jpg"); }
+  .picture img {
+    padding: 20px; }
+
+.paragraph {
+  margin-left: 20px; }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0; }
+
+.pagination {
+  display: flex;
+  justify-content: center; }
+
 body {
   background-image: url("../img/background3.jpg");
   background-position: 100%;
@@ -166,114 +265,6 @@ h1 {
     width: 50%; }
   .home .feature {
     width: 50%; }
-
-/*Error Styles
------------------------*/
-.errorPage {
-  height: 500px; }
-  .errorPage h1 {
-    text-align: center; }
-
-.icn-logo {
-  background: #54606b;
-  color: #fff; }
-
-.icn-logo i {
-  font-size: 2.45em;
-  line-height: 0;
-  margin-top: 30px; }
-
-.icn-error {
-  font-size: 5em;
-  margin-bottom: .25em;
-  margin-right: auto;
-  margin-left: auto;
-  padding: 0 2em; }
-
-/* Gallery CSS
-----------------------------*/
-.list {
-  display: flex;
-  list-style: none;
-  flex-wrap: wrap; }
-  .list li {
-    align-self: center; }
-
-.name {
-  color: black; }
-
-#gallery ul li {
-  display: inline-block;
-  margin: 20px;
-  vertical-align: top; }
-  #gallery ul li a {
-    text-decoration: none; }
-  #gallery ul li p {
-    margin-top: 20px;
-    text-align: center; }
-  #gallery ul li img {
-    width: 150px;
-    display: inline-block; }
-  #gallery ul li h4 {
-    max-width: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-
-h2 {
-  text-align: center; }
-
-.search {
-  display: block;
-  margin-left: auto;
-  margin-right: auto; }
-
-/* Menu CSS
----------------------*/
-#menu button {
-  background-color: rgba(0, 0, 0, 0);
-  border: none;
-  margin: 0; }
-
-#menu li {
-  vertical-align: top;
-  font-size: 1em; }
-
-#all {
-  font-size: 1em;
-  padding: 0; }
-
-.sub {
-  font-size: 0.75em; }
-
-.supersub {
-  padding-left: 0; }
-
-.supersub li {
-  font-size: 0.6em;
-  display: block !important; }
-
-.picture {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  background-image: url("../img/overlay.jpg"); }
-
-.picture img {
-  padding: 20px; }
-
-.paragraph {
-  margin-left: 20px; }
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0; }
 
 /* Query CSS
 ---------------------*/
