--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -17,65 +17,68 @@
     padding: 20px;
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
 
 }
 
 .dialog {
 	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .dialogHeader {
 	display: flex;
+	justify-content: center;
 	h3 {
-		width: 98%;
 		font-family: $frijole;
 	}
 	button {
-	width: 2.5em;
-	height: 2.5em;
-	text-align: left;
-	background-color: #5a5a5a;
-	position: fixed;
-	z-index: 9999;
-	top: 2em;
-	right: 2em;
-	-webkit-transition: color .3s ease;
-	transition: color .3s ease; 
-	&:hover	{
-		background-color: gray;
-	}
-	&:focus {
-		background-color: gray; 
-	}
-	&:before{
-	  width: 2px;
-	  color: #fff;
-	  content: 'x';
-	  font-size: 2.25em;
-	  position: absolute;
-	  top: -25%;
-	  left: 30%;
-	  margin-left: -1px; 	
-	}
-	&:after {
-	  width: 2px;
-	  color: #fff;
-	  content: 'x';
-	  font-size: 2.25em;
-	  position: absolute;
-	  top: -25%;
-	  left: 30%;
-	  margin-left: -1px; 
-	}
+		width: 2.5em;
+		height: 2.5em;
+		text-align: left;
+		background-color: #5a5a5a;
+		position: fixed;
+		z-index: 9999;
+		top: 2em;
+		right: 2em;
+		-webkit-transition: color .3s ease;
+		transition: color .3s ease; 
+		&:hover	{
+			background-color: gray;
+		}
+		&:focus {
+			background-color: gray; 
+		}
+		&:before{
+			width: 2px;
+			color: #fff;
+			content: 'x';
+			font-size: 2.25em;
+			position: absolute;
+			top: -25%;
+			left: 30%;
+			margin-left: -1px;
+		}
+		&:after {
+		  width: 2px;
+		  color: #fff;
+		  content: 'x';
+		  font-size: 2.25em;
+		  position: absolute;
+		  top: -25%;
+		  left: 30%;
+		  margin-left: -1px; 
+		}
 	}
 }
 
 .dialogDescription {
 	padding: 20px;
 	width: 50%;
-
 	p {
-		font-weight: bold;
-		text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+		font-family: $frijole;
 	}
 }
