--- a/src/css/main.css
+++ b/src/css/main.css
@@ -107,8 +107,7 @@ footer {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
   flex-direction: column; }
 
 .dialog {
@@ -230,7 +229,7 @@ h2 {
     padding: 20px; }
 
 .paragraph {
-  margin-left: 20px; }
+  margin-left: 30px; }
 
 .overlay {
   position: fixed;
@@ -302,5 +301,3 @@ h1 {
     width: 25%; }
   .main {
     width: 50%; } }
-
-/*# sourceMappingURL=main.css.map */
