--- a/src/css/_pictures.scss
+++ b/src/css/_pictures.scss
@@ -2,9 +2,6 @@
 	display: flex;
 	list-style: none;
 	flex-wrap: wrap;
-	li {
-		height: 325px;
-	}
 }
 
 
@@ -22,12 +19,12 @@
 				text-align: center; 
 			}
 			img {
-				width: 150px;
-				margin: 20px; 
+				margin-top: 10px;
+				width: 250px;
 				display: inline-block;
 			}
 			h4 {
-				width: 200px;
+				width: 250px;
 				text-align: center;
 				display: flex;
 				justify-content: center;
@@ -40,12 +37,6 @@
 
 h2 {
 	text-align: center;
-}
-
-.search {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 
@@ -79,4 +70,27 @@ h2 {
 .pagination {
 	display: flex;
 	justify-content: center;
+}
+
+
+
+@media (min-width: 769px) {
+.list {
+	li {
+		height: 325px;
+	}
+}
+	#gallery { 
+		ul {
+			li {
+				img {
+					width: 150px;
+					margin: 20px;
+				}
+				h4 {
+					width: 190px;
+				}
+			}
+		}    
+	}
 }
