--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,9 +1,7 @@
 .about {
   display: block;
   margin-left: auto;
-  margin-right: auto;
-  max-width: 800px;
-  padding: 50px; }
+  margin-right: auto; }
   .about h2 {
     font-family: "Frijole", cursive; }
 
@@ -54,7 +52,8 @@ footer {
     list-style: none;
     font-family: "Frijole", cursive;
     vertical-align: top;
-    font-size: 1em; }
+    font-size: 1em;
+    margin: 10px; }
   #menu a {
     text-decoration: none;
     color: black; }
@@ -62,20 +61,6 @@ footer {
     background-color: rgba(0, 0, 0, 0);
     border: none;
     margin: 0; }
-
-#all {
-  font-size: 1em;
-  padding: 0; }
-
-.sub {
-  font-size: 0.75em; }
-
-.supersub {
-  padding-left: 0; }
-
-.supersub li {
-  font-size: 0.6em;
-  display: block !important; }
 
 #feature img {
   padding: 10px;
@@ -107,17 +92,21 @@ footer {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: space-between;
-  flex-direction: column; }
+  justify-content: space-between; }
+
+.dialogImage img {
+  width: 300px; }
 
 .dialog {
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  flex-wrap: wrap; }
 
 .dialogHeader {
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  margin-top: -20px; }
   .dialogHeader h3 {
     font-family: "Frijole", cursive; }
   .dialogHeader button {
@@ -127,8 +116,8 @@ footer {
     background-color: #5a5a5a;
     position: fixed;
     z-index: 9999;
-    top: 2em;
-    right: 2em;
+    top: 1em;
+    right: 1em;
     -webkit-transition: color .3s ease;
     transition: color .3s ease; }
     .dialogHeader button:hover {
@@ -155,10 +144,14 @@ footer {
       margin-left: -1px; }
 
 .dialogDescription {
-  padding: 20px;
-  width: 50%; }
+  padding: 5px; }
   .dialogDescription p {
-    font-family: "Frijole", cursive; }
+    line-height: 1.2em; }
+
+@media (min-width: 512px) {
+  .dialogDescription {
+    padding: 20px;
+    width: 50%; } }
 
 .errorPage {
   height: 500px; }
@@ -185,8 +178,6 @@ footer {
   display: flex;
   list-style: none;
   flex-wrap: wrap; }
-  .list li {
-    height: 325px; }
 
 #gallery ul li {
   display: flex;
@@ -198,11 +189,11 @@ footer {
     margin-top: 20px;
     text-align: center; }
   #gallery ul li img {
-    width: 150px;
-    margin: 20px;
+    margin-top: 10px;
+    width: 250px;
     display: inline-block; }
   #gallery ul li h4 {
-    width: 200px;
+    width: 250px;
     text-align: center;
     display: flex;
     justify-content: center;
@@ -211,11 +202,6 @@ footer {
 
 h2 {
   text-align: center; }
-
-.search {
-  display: block;
-  margin-left: auto;
-  margin-right: auto; }
 
 .picture {
   position: absolute;
@@ -243,6 +229,15 @@ h2 {
   display: flex;
   justify-content: center; }
 
+@media (min-width: 769px) {
+  .list li {
+    height: 325px; }
+  #gallery ul li img {
+    width: 150px;
+    margin: 20px; }
+  #gallery ul li h4 {
+    width: 190px; } }
+
 body {
   background-image: url("../img/background3.jpg");
   background-position: 100%;
@@ -251,7 +246,8 @@ body {
   font-family: 'Droid Sans', sans-serif; }
 
 .flex-container {
-  display: flex; }
+  display: flex;
+  flex-wrap: wrap; }
 
 h1 {
   font-family: "Frijole", cursive; }
@@ -259,7 +255,8 @@ h1 {
 .main {
   background-image: url("../img/background2.jpg");
   background-position: center;
-  background-size: cover; }
+  background-size: cover;
+  width: 100%; }
 
 #intro {
   padding: 20px; }
