--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -19,6 +19,7 @@ body {
 
 .flex-container {
 	display: flex;
+	flex-wrap: wrap;
 }
 
 h1 {
@@ -29,6 +30,7 @@ h1 {
 	background-image: url("../img/background2.jpg");
 	background-position: center;
 	background-size: cover;
+	width: 100%;
 }
 #intro {
 	padding: 20px;
