Moved updated Feature component with use of Picture Component, converted PictureList to use axios

--- a/src/css/_feature.scss
+++ b/src/css/_feature.scss
@@ -14,5 +14,9 @@
 		font-family: $frijole;
 		margin-bottom: 20px;
 		text-align: center;
+		color: black;
+	}
+	a:hover {
+		text-decoration: none;
 	}
 }
