--- a/src/css/_modal.scss
+++ b/src/css/_modal.scss
@@ -1,13 +1,12 @@
 @import '_imports.scss';
 
-.modal-dialog {
-	width: 100%;
-	margin: 0;
+.overlay {
 	position: fixed;
 	top: 0;
+	left: 0;
 	right: 0;
 	bottom: 0;
-	left: 0; 
+	z-index: 1000;
 }
 
 .dialogStyle {
@@ -32,52 +31,6 @@
 	flex-wrap: wrap;
 }
 
-.dialogHeader {
-	display: flex;
-	justify-content: center;
-	margin-top: -20px;
-	h3 {
-		font-family: $frijole;
-	}
-	button {
-		width: 2.5em;
-		height: 2.5em;
-		text-align: left;
-		background-color: #5a5a5a;
-		position: fixed;
-		z-index: 9999;
-		top: 1em;
-		right: 1em;
-		-webkit-transition: color .3s ease;
-		transition: color .3s ease; 
-		&:hover	{
-			background-color: gray;
-		}
-		&:focus {
-			background-color: gray; 
-		}
-		&:before{
-			width: 2px;
-			color: #fff;
-			content: 'x';
-			font-size: 2.25em;
-			position: absolute;
-			top: -25%;
-			left: 30%;
-			margin-left: -1px;
-		}
-		&:after {
-		  width: 2px;
-		  color: #fff;
-		  content: 'x';
-		  font-size: 2.25em;
-		  position: absolute;
-		  top: -25%;
-		  left: 30%;
-		  margin-left: -1px; 
-		}
-	}
-}
 
 .dialogDescription {
 	padding: 5px;
@@ -88,9 +41,8 @@
 
 
 @media (min-width: 512px) {
-.dialogDescription {
-	padding: 20px;
-	width: 50%;
-}
-
+	.dialogDescription {
+		padding: 20px;
+		width: 50%;
+	}
 }
