--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -32,7 +32,7 @@ h1 {
 	background-size: cover;
 	width: 100%;
 }
-#intro {
+.intro p {
 	padding: 20px;
 }
 
@@ -66,10 +66,6 @@ h1 {
 			color: black;
 			font-size: 1.5em;
 		}	
-	}
-
-	#all {
-		font-size: 1.5em;
 	}
 }
 
